4, 5 tasks and tests