@@ -4,12 +4,14 @@ import com.pengrad.telegrambot.model.Update;
 import com.pengrad.telegrambot.model.request.ForceReply;
 import com.pengrad.telegrambot.request.SendMessage;
 import lombok.AllArgsConstructor;
+import lombok.SneakyThrows;
 import org.springframework.stereotype.Component;
 import ru.tinkoff.edu.java.bot.webclient.ScrapperClient;
 import ru.tinkoff.edu.java.common.dto.request.AddLinkRequest;
 import ru.tinkoff.edu.java.common.dto.response.LinkResponse;
 
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 @AllArgsConstructor
 @Component
@@ -18,6 +20,7 @@ public class TrackCommand implements Command {
 	public static final String REPLY = "Укажите ссылку для отслеживания";
 	private final String LINK_ADDED = "Ссылка добавлена: ";
 	private final String PLACE_HOLDER = "Ссылка на GitHub или StackOverflow";
+	private final String NOT_VALID_LINK = "Неверный формат ссылки";
 	private ScrapperClient client;
 
 	@Override
@@ -32,13 +35,19 @@ public class TrackCommand implements Command {
 		return "начать отслеживание ссылки";
 	}
 
+	@SneakyThrows
 	@Override
 	public SendMessage handle(Update update) {
 
 		Long chatId = update.message().chat().id();
 		if (isReply(update)) {
-			URI link = URI.create(update.message().text());
-			AddLinkRequest addLinkRequest = new AddLinkRequest(link);
+			URL link = null;
+			try {
+				link = new URL(update.message().text());
+			} catch (MalformedURLException e) {
+				return new SendMessage(chatId, NOT_VALID_LINK);
+			}
+			AddLinkRequest addLinkRequest = new AddLinkRequest(link.toURI());
 			try {
 				LinkResponse response = client.addLink(chatId, addLinkRequest).block();
 				return new SendMessage(chatId, LINK_ADDED + response.url());
